<resources>
    <string name="app_name">YourMeals</string>
    <string name="id"><u>Identifiant</u></string>
    <string name="age">Catégorie d\'âge: </string>
    <string name="weight">Poids (en kg): </string>
    <string name="height">Taille (en cm): </string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="validation">Validate</string>
    <string name="kid">Enfant</string>
    <string name="teen">Adolescent</string>
    <string name="man">Homme</string>
    <string name="woman">Femme</string>

    <string name="scanFoodDropMenu">Scanner un article</string>
    <string name="seekFoodDropMenu">Recommandations d\'articles</string>
    <string name="receiptRecomfoodDropMenu">Recommandations de recettes</string>


    <string name="username">User Name</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <string name="welcome">Welcome To Your Calorie Counter</string>
    <string name="infos">Here you can manage your meal in order to improve your daily health.</string>

    <string name="recommendation">Here you can get recommendations</string>
    <string name="recotype">Select the type of recommendation</string>
    <string name="recopast">Add past meals</string>
    <string name="recosport">Select last physical activity</string>

    <string name="nextbutton">Next</string>

    <string name="urlinfo">url for extra info:</string>
    <string name="productinfos">Informations Produit:</string>

    <string name="rateTitle">Nom du produit :</string>
    <!-- Id's -->
    <item name="btn_signup" type="id"></item>
    <item name="btn_login" type="id"></item>
    <item name="input_username" type="id"></item>
    <item name="input_password" type="id"></item>
    <item name="input_password_repeat" type="id"></item>
    <item name="link_signup" type="id"></item>
    <item name="link_login" type="id"></item>

    <string name="ok">Noter</string>
    <string name="cancel">Annuler</string>
    <string name="product_name">Nom du Produit</string>
    <string name="cal">Calories (kcal)</string>
    <string name="cal2">Calories pour aujourd\'hui (kcal)</string>
    <string name="quantity">Portion</string>
    <string name="fat">Lipides (g)</string>
    <string name="insatfat">Graisses Insaturées (g)</string>
    <string name="prot">Protéines (g)</string>
    <string name="carbo">Glucides (g)</string>
    <string name="sodium">Sel (g)</string>
    <string name="sugar">Sucre (g)</string>
    <string name="title_activity_day_recording">Activity</string>
</resources>

