<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:weightSum="1">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/age"
        android:id="@+id/textView2"
        android:textColor="#000000"
        android:textSize="26sp"
        android:layout_marginTop="68dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/kid"
        android:id="@+id/kid"
        android:background="@drawable/background_button_round_left"
        android:textColor="#000000"
        android:layout_below="@+id/textView2"
        android:layout_alignParentLeft="true"
        android:clickable="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/teen"
        android:id="@+id/teen"
        android:background="@drawable/background_button2"
        android:textColor="#000000"
        android:layout_above="@+id/textView"
        android:layout_toRightOf="@+id/kid" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/man"
        android:id="@+id/man"
        android:background="@drawable/background_button2"
        android:textColor="#000000"
        android:layout_below="@+id/textView2"
        android:layout_toRightOf="@+id/teen" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/woman"
        android:id="@+id/woman"
        android:background="@drawable/backgroud_button_round_right"
        android:textColor="#000000"
        android:layout_below="@+id/textView2"
        android:layout_toRightOf="@+id/man" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:id="@+id/textView"
        android:text="@string/height"
        android:textSize="26sp"
        android:layout_marginLeft="24dp"
        android:layout_alignParentLeft="true"
        android:layout_marginTop="40dp"
        android:textColor="#000000"
        android:layout_below="@+id/kid" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:ems="10"
        android:id="@+id/data_height"
        android:layout_below="@+id/textView"
        android:layout_alignLeft="@+id/textView" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/weight"
        android:id="@+id/textView6"
        android:layout_marginTop="62dp"
        android:textSize="26sp"
        android:textColor="#000000"
        android:layout_below="@+id/data_height"
        android:layout_alignLeft="@+id/data_height" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="numberDecimal"
        android:ems="10"
        android:id="@+id/data_weight"
        android:layout_below="@+id/textView6"
        android:layout_alignLeft="@+id/textView6" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Update Data"
        android:id="@+id/update"
        android:layout_marginBottom="32dp"
        android:textColor="#ffffff"
        android:background="@drawable/background_button"
        android:minWidth="120sp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true" />

</RelativeLayout>
